--- a/level_2_3/package.json
+++ b/level_2_3/package.json
@@ -13,6 +13,8 @@
     "node-sass": "^4.14.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-dropzone": "^10.2.2",
+    "react-lazy-load-image-component": "^1.4.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
     "typescript": "^3.7.5"
@@ -39,6 +41,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-lazy-load-image-component": "^1.3.0",
     "@types/react-router-dom": "^5.1.4"
   }
 }
